image texts added

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
 
-<img src="./images/bg-pattern-top.svg" class="bg left-bg">
-<img src="./images/bg-pattern-bottom.svg" class="bg right-bg">
+<img src="./images/bg-pattern-top.svg" alt="bg-pattern-top" class="bg left-bg">
+<img src="./images/bg-pattern-bottom.svg" alt="bg-pattern-bottom" class="bg right-bg">
   <main>
     <div class="card-container">
       <div class="card-middle">
